Allow saving/loading of Encoding in 'Save as Default'. Will backport to 3.4

BUG: 107329

svn path=/trunk/KDE/kdebase/konsole/; revision=426784